--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,7 +13,7 @@
     </div><div class="right">
       <h2 class="haztivity">Haztivity</h2>
       <h1>
-        The Progressive<br>JavaScript Framework
+        The First<br>Elearning Framework
       </h1>
       <p>
         <%#<a id="modal-player" class="button has-icon" href="javascript:;">%>
