Home, imágenes de cursos, textos de la home.

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -11,16 +11,16 @@
     <div class="left">
       <img class="hero-logo" src="<%- url_for("/images/logo.png") %>">
     </div><div class="right">
-      <h2 class="haztivity">Haztivity</h2>
+      <h2 class="Haztivity">Haztivity</h2>
       <h1>
-        The First<br>Elearning Framework
+        The First <br>Elearning Framework
       </h1>
       <p>
         <%#<a id="modal-player" class="button has-icon" href="javascript:;">%>
           <%#- partial('icons/play') %>
           <%#¿Qué aporta Haztivity?</a>%>
         <a class="button white" href="<%- url_for("/v0.x/guide/") %>">Comenzar</a>
-        <a class="button gray has-icon" href="https://github.com/haztivity/core" target="_blank">
+        <a class="button gray has-icon" href="https://github.com/Haztivity/core" target="_blank">
           <%- partial('icons/github-dark') %>
           GITHUB</a>
       </p>
@@ -31,29 +31,42 @@
 <div id="highlights">
   <div class="inner">
     <div class="point">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget velit a ipsum imperdiet eleifend facilisis in augue.</p>
+      <h2>Mútliple recursos</h2>
+      <p>Haztivity ofrece una gran variedad de recursos interactivos para que crees tu curso e-learning.</p>
     </div>
 
     <div class="point">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget velit a ipsum imperdiet eleifend facilisis in augue.</p>
+      <h2>Crea tu curso e-learning</h2>
+      <p>Crea fantásticos cursos e-learning de manera rápida y con el mínimo código.</p>
     </div>
 
     <div class="point">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget velit a ipsum imperdiet eleifend facilisis in augue.</p>
+      <h2>Open Source</h2>
+      <p>Haztivity es open source e integra alguno de los componentes más utilizados y basados en JQuery</p>
+    </div>
+  </div>
+  <div class="inner">
+    <hr>
+      <p><strong>Haztivity</strong> está desarrollado y mantenido por un equipo cuya dedicación es la creación diaria de cursos e-learning. Utilizamos el framework para desarrollar nuestros propios cursos y queremos compatir con la comunidad todos los recursos que vamos generando.</p>
+      <p>Las razones de compartir el framework son, por una parte, el hecho de que parte de los componentes los hemos tomado de desarrolladores que los ofrecen libremente y nosotros los adaptamos al framework Haztivity. La otra razón es por que continuamente formamos a desarrolladroes que colaboran en nuestros cursos y para ello es necesario dotarles de una buena documentación.</p>
+  <hr>
+    <h2>Ejemplos de cursos desarrollados con Haztivity.</h2>
+    <div class="curso">
+      <img src="<%- url_for("/images/curso1.png") %>">
+      <img src="<%- url_for("/images/curso2.png") %>">
+      <img src="<%- url_for("/images/curso3.png") %>">
+      <img src="<%- url_for("/images/curso4.png") %>">
+      <img src="<%- url_for("/images/curso5.png") %>">
+      <img src="<%- url_for("/images/curso6.png") %>">
     </div>
   </div>
 </div>
-
-
 <div id="footer">
   <p>
-    <a class="social-icon" href="https://github.com/haztivity/core" target="_blank">
+    <a class="social-icon" href="https://github.com/Haztivity/core" target="_blank">
       <%- partial('icons/github') %>
     </a>
-    <a class="social-icon" href="https://twitter.com/haztivity" target="_blank">
+    <a class="social-icon" href="https://twitter.com/Haztivity" target="_blank">
       <%- partial('icons/twitter') %>
     </a>
   </p>
