--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -93,6 +93,10 @@ body
     max-width: $width
     margin: 0 auto
     text-align: center
+    .curso
+      img
+        margin: 20px
+        border: 1px solid #ccc
   .point
     width: 33%
     display: inline-block
@@ -107,6 +111,7 @@ body
       padding: .5em 0
     p
       color: $light
+
 
 #footer
   padding: $space 0
