--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -32,7 +32,7 @@
   <% } %>
   <div class="footer">
     ¿Has encontrado algún error o quieres contribuir?
-    <a href="https://github.com/haztivity/haztivity.com/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
+    <a href="https://github.com/Haztivity/Haztivity.com/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
       ¡Edita esta página en GitHub!
     </a>
   </div>
