--- a/themes/vue/layout/partials/language_dropdown.ejs
+++ b/themes/vue/layout/partials/language_dropdown.ejs
@@ -1,6 +1,6 @@
 <li class="nav-dropdown-container language">
   <a class="nav-link">Traducciones</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="https://haztivity.com/<%- page.path %>" class="nav-link" target="_blank">Español</a></li>
+    <li><a href="https://Haztivity.com/<%- page.path %>" class="nav-link" target="_blank">Español</a></li>
   </ul>
 </li>
