--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -5,5 +5,6 @@
 </li>
 <%- partial('partials/learn_dropdown') %>
 <li><a href="<%- url_for("/v0.x/resources/") %>" class="nav-link<%- page.path.match(/\/resources(\/|$)/) ? ' current' : '' %>">Recursos</a></li>
+<li><a href="<%- url_for("/methodology/") %>" class="nav-link<%- page.path.match(/\/methodology(\/|$)/) ? ' current' : '' %>">Metodología</a></li>
 <%#- partial('partials/ecosystem_dropdown') %>
 <%#- partial('partials/language_dropdown') %>
