--- a/themes/vue/layout/layout.ejs
+++ b/themes/vue/layout/layout.ejs
@@ -20,8 +20,8 @@
     
     <link rel="icon" href="<%- url_for("/images/logo.png") %>" type="image/png">
 
-    <meta name="msapplication-TileColor" content="#4fc08d">
-    <meta name="theme-color" content="#4fc08d">
+    <meta name="msapplication-TileColor" content="#ff4e4a">
+    <meta name="theme-color" content="#ff4e4a">
 
     <link rel="manifest" href="/manifest.json">
 
