--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -11,11 +11,11 @@
           guide: 'Guía'
         } %>
         <%- titles[type] %>
-        <%# if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
+        <% if (['methodology'].indexOf(type) === -1) { %>
           <select class="version-select">
             <option value="SELF" selected>0.6</option>
           </select>
-        <%# } %>
+        <% } %>
       </h2>
       <%- partial('partials/toc', { type: type }) %>
     </div>
