Incluir un gif animado como muestra de un curso.

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -52,7 +52,7 @@
   <hr>
     <h2>Ejemplos de cursos desarrollados con Haztivity.</h2>
     <div class="curso">
-      <img src="<%- url_for("/images/curso1.png") %>">
+      <img src="<%- url_for("/images/curso1.gif") %>">
       <img src="<%- url_for("/images/curso2.png") %>">
       <img src="<%- url_for("/images/curso3.png") %>">
       <img src="<%- url_for("/images/curso4.png") %>">
