Se añade el email de contacto

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -69,9 +69,12 @@
     <a class="social-icon" href="https://twitter.com/Haztivity" target="_blank">
       <%- partial('icons/twitter') %>
     </a>
+    <a class="social-icon" href="mailto:hello@haztivity.com?Subject=Hello%20again"  target="_blank">
+        hello@haztivity.com
+    </a>
   </p>
   <p>Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a><br>
-  Copyright &copy; 2017-<%- new Date().getFullYear() %> Finsi</p>
+  Copyright &copy; 2017-<%- new Date().getFullYear() %> FINSI Group</p>
 </div>
 
 <%#<div id="video-modal" class="modal">
