fix: styles for tip component feat: Started documentation in guide refactor: Renamed default post.

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -74,7 +74,8 @@
     </a>
   </p>
   <p>Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a><br>
-  Copyright &copy; 2017-<%- new Date().getFullYear() %> FINSI Group</p>
+  Copyright &copy;2017-<%- new Date().getFullYear() %> FINSI Group</p>
+  <p>El tema de este sitio está basado en el tema de <a href="https://github.com/vuejs/vuejs.org">Vue.org</a></p>
 </div>
 
 <%#<div id="video-modal" class="modal">
