refactor: Color setting refactor: old tip is now tip.tip--alert feat: Included font awesome 5 feat: Added info tip feat: Added browser compatibility info

--- a/themes/vue/source/css/_settings.styl
+++ b/themes/vue/source/css/_settings.styl
@@ -11,12 +11,12 @@ $code-font-size = .8em
 $dark   = #2c3e50
 $medium = #34495e
 $light  = #7f8c8d
-$green  = #ff4e4a
+$green  = #4CAF50
 $border = #dddddd
 $codebg = #f8f8f8
 $red = #ff6666
 $info = #1C90F3
-
+$primary = #ff6666
 $radius = 2px
 $content-padding-top = 30px
 
