--- a/themes/vue/source/css/_sponsors-sidebar.styl
+++ b/themes/vue/source/css/_sponsors-sidebar.styl
@@ -15,10 +15,10 @@
     width: 125px
 
 .become-backer
-  border: 1px solid $green
+  border: 1px solid $primary
   border-radius: 2em
   display: inline-block
-  color: $green
+  color: $primary
   font-size: .8em
   width: 125px
   padding: 4px 0
