--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -53,10 +53,10 @@ a.button
   border-radius: 2em
   display: inline-block
   color: #fff
-  background-color: lighten($green, 8%)
+  background-color: lighten($primary, 8%)
   transition: all .15s ease
   box-sizing: border-box
-  border: 1px solid lighten($green, 8%)
+  border: 1px solid lighten($primary, 8%)
   &.has-icon
     position: relative
     text-indent: 1.4em;
@@ -67,7 +67,7 @@ a.button
       width: 2em
   &.white
     background-color: #fff
-    color: $green
+    color: $primary
   &.gray
     background-color: #f6f6f6
     color: $light
@@ -174,7 +174,7 @@ a.button
       font-size: .9em
       display: block
       &:hover
-        color: $green
+        color: $primary
   .arrow
     display: inline-block
     vertical-align: middle
