--- a/themes/vue/source/css/_sidebar.styl
+++ b/themes/vue/source/css/_sidebar.styl
@@ -33,7 +33,7 @@
     color: $light
     &.current
       font-weight: 600
-      color: $green
+      color: $primary
     &.new
       &:after
         content: "NEW"
@@ -41,7 +41,7 @@
         font-size: 10px
         font-weight: 600
         color: #fff
-        background-color: $green
+        background-color: $primary
         line-height: 14px
         padding: 0 4px
         border-radius: 3px
@@ -50,11 +50,11 @@
         position: relative
         top: -1px
     &:hover
-      border-bottom: 2px solid $green
+      border-bottom: 2px solid $primary
   .section-link
     &.active
       font-weight: bold
-      color: $green
+      color: $primary
   .main-menu
     margin-bottom: 20px
     display: none
