--- a/themes/vue/source/css/_team.styl
+++ b/themes/vue/source/css/_team.styl
@@ -69,7 +69,7 @@
         color: steelblue
         &:after
           content: "\f06a"
-          font-family: FontAwesome
+          font-family: "Font Awesome 5 Pro"
           font-size: .75em
           vertical-align: super
           margin-left: 4px
