--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -104,7 +104,7 @@ body
     box-sizing: border-box
     padding: 0 2em
     h2
-      color: $green
+      color: $primary
       font-size: 1.5em
       font-weight: 400
       margin: 0
@@ -165,4 +165,4 @@ body
       padding: 0 40px 30px
       &:before
         content: "—"
-        color: $green
+        color: $primary
