--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -73,7 +73,7 @@
     position: relative
     &:after
       content: "#"
-      color: $green
+      color: $primary
       position: absolute
       left: -0.7em
       bottom: -2px
@@ -95,12 +95,12 @@
     // FIX: Some link click targets are covered without this
     position: inherit
   a
-    color: $green
+    color: $primary
     font-weight: 600
   blockquote
     margin: 2em 0
     padding-left: 20px
-    border-left: 4px solid $green
+    border-left: 4px solid $primary
     p
       font-weight: 600
       margin-left: 0
@@ -127,48 +127,51 @@
       background-color: #f8f8f8
       code
         background-color: #efefef
-  p
-    &.tip, &.success
-      padding: 12px 24px 12px 30px
-      margin: 2em 0
-      border-left-width: 4px
-      border-left-style: solid
-      background-color: $codebg
-      position: relative
-      border-bottom-right-radius: $radius
-      border-top-right-radius: $radius
-      &+br
-        display:none
-      &.tip--strip
-        margin:0;
-      &:before
-        position: absolute
-        top: 14px
-        left: -12px
-        color: #fff
-        width: 20px
-        height: 20px
-        border-radius: 100%
-        text-align: center
-        line-height: 20px
-        font-weight: bold
-        font-family: $logo-font
-        font-size: 14px
-      code
-        background-color: #efefef
-      em
-        color: $medium
-    &.tip
+
+  .tip
+    padding: 12px 24px 12px 30px
+    margin: 2em 0
+    border-left-width: 4px
+    border-left-style: solid
+    background-color: $codebg
+    position: relative
+    border-bottom-right-radius: $radius
+    border-top-right-radius: $radius
+    border-color: $primary
+    &+br
+      display:none
+    &.tip--strip
+      margin:0;
+    &:before
+      content:"!";
+      position: absolute
+      top: 14px
+      left: -13px
+      color: #fff
+      width: 22px
+      height: 22px
+      border-radius: 4px
+      background-color:$primary
+      text-align: center
+      line-height: 20px
+      font-weight: bold
+      font-family: "Font Awesome 5 Pro"
+      font-size: 16px
+    code
+      background-color: #efefef
+    em
+      color: $medium
+    &.tip--alert
       border-left-color: $red
       &:before
         content: "!"
+        border-radius:50%
         background-color: $red
-    &.success
-      border-left-color: $green
+    &.tip--success
+      border-left-color: $primary
       &:before
         content: "\f00c"
-        font-family: FontAwesome
-        background-color: $green
+        background-color: $primary
 
 .guide-links
   margin-top: 2em
@@ -213,7 +216,7 @@
   .nav-link
     padding-bottom: 1px
     &:hover, &.current
-      border-bottom: 2px solid $green
+      border-bottom: 2px solid $primary
   #mobile-bar
     display: block
   #main
