--- a/themes/vue/source/css/search.styl
+++ b/themes/vue/source/css/search.styl
@@ -24,7 +24,7 @@ $border = #ddd
   border-color: $border
 
 .algolia-docsearch-suggestion--category-header
-  background: $green
+  background: $primary
 
 .algolia-docsearch-footer
   border-color: $border
