--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -17,11 +17,12 @@
   transition: background-color .3s ease-in-out
 
 .content
-  position: relative
-  padding: 2.2em 0
-  max-width: 600px
-  margin: 0 auto
-  padding-left: 50px
+  position: relative;
+  padding: 2.2em 0;
+  padding-left: 280px;
+  width: 70em;
+  max-width: calc(100% - 280px);
+  margin: 0 auto;
   &.api
     > a:first-of-type > h2
       margin-top: 0
@@ -189,13 +190,9 @@
   .sidebar
     position: fixed
 
-@media screen and (min-width: 1590px)
-  #header
-    background-color: rgba(255,255,255,.4)
-
 @media screen and (max-width: 1300px)
-  .content.with-sidebar
-    margin-left: 290px
+  //.content.with-sidebar
+    //margin-left: 290px
   #ad
     z-index: 1
     position: relative
